--- a/view/common/block-template/los-featured.phtml
+++ b/view/common/block-template/los-featured.phtml
@@ -1,8 +1,24 @@
+<?php 
+$siteSettingService = $this->getHelperPluginManager()->get('siteSetting');
+
+// Initialize arrays
+$externalSites = [];
+$librarySites = [];
+
+foreach ($sites as $site) {
+    $category = $siteSettingService('extended_site_description_categories', null, $site->id());
+
+    if ($category === 'External') {
+        $externalSites[] = $site;
+    } elseif ($category === 'Library') {
+        $librarySites[] = $site;
+    }
+}
+?>
+
 <div class="list-of-sites">
     <div class="site-list">
         <?php
-        $siteSettingService = $this->getHelperPluginManager()->get('siteSetting');
-
         foreach ($sites as $site):
             $featured = $siteSettingService('extended_site_description_featured', null, $site->id());
 
@@ -15,6 +31,40 @@
             endif;
         endforeach;
         ?>
+    </div>
+
+    <h2>External Sites</h2>
+    <div class="list-of-sites">
+    <div class="site-list">
+        <?php foreach ($externalSites as $site): ?>
+            <?php echo $this->partial('common/site-list-entry', ['site' => $site]); ?>
+        <?php endforeach; ?>
+
+        <?php
+        foreach ($externalSites as $site):
+                echo $this->partial('common/site-list-entry', [
+                    'site' => $site,
+                    'showSummary' => $summaries,
+                    'showThumbnail' => $thumbnails
+                ]);
+        endforeach;
+        ?>
+        </div>
+    </div>
+
+    <h2>Library Sites</h2>
+    <div class="list-of-sites">
+    <div class="site-list">
+    <?php
+        foreach ($librarySites as $site):
+                echo $this->partial('common/site-list-entry', [
+                    'site' => $site,
+                    'showSummary' => $summaries,
+                    'showThumbnail' => $thumbnails
+                ]);
+        endforeach;
+        ?>
+        </div>
     </div>
 
     <?php if ($pagination): ?>
