--- a/view/common/block-template/media-caption-text-metadata.phtml
+++ b/view/common/block-template/media-caption-text-metadata.phtml
@@ -79,7 +79,7 @@ $thumbnailType = $block->dataValue('thumbnail_type');
                 <?php endif;
             ?>
             <div class="learn-more flex-container align-center">
-                <button class="button medium warning hollow"><?php echo $item->link("Learn more"); ?></button>
+                <?php echo $item->link("Learn more", null, ['class' => 'button medium warning hollow']); ?>
             </div>
         </div>
         <?php endforeach; ?>
