--- a/view/common/block-template/media-text-only.phtml
+++ b/view/common/block-template/media-text-only.phtml
@@ -7,7 +7,7 @@
  * @var string $showTitleOption "item_title" or "file_name" or "none".
  */
 
- $plugins = $this->getHelperPluginManager();
+$plugins = $this->getHelperPluginManager();
 $hyperlink = $plugins->get('hyperlink');
 $siteSetting = $plugins->get('siteSetting');
 
@@ -18,7 +18,7 @@ $lang = $filterLocale ? $this->lang() : null;
 ?>
 
 <div class="block media-text flex-container align-middle align-center">
-    <div class="resource-text align-middle padding-1 flex-container flex-dir-column align-middle align-center">
+    <div class="resource-text align-middle medium-padding-1 flex-container flex-dir-column align-middle align-center">
             <?php foreach ($attachments as $attachment): 
                 $render = null;
                 $title = null;
@@ -37,21 +37,51 @@ $lang = $filterLocale ? $this->lang() : null;
                 }
                 ?>
             <?php endforeach; ?>
-        <div class="metadata margin-bottom-1 separator-center">
-            <?php if ($showTitleOption == "item_title"): ?>
-                <h2><?= htmlspecialchars($item->displayTitle()) ?></h2>
-            <?php elseif ($showTitleOption == "file_name" && isset($media)): ?>
-                <h2><?= htmlspecialchars($media->displayTitle()) ?></h2>
-            <?php endif; ?>
-            <?php if ($alternative = $item->value('dcterms:alternative')): ?>
-                <h2 class="h4 italic-font"><small><?= htmlspecialchars($alternative) ?></small></h2>
+        <div class="metadata separator-center margin-bottom-1">
+        <?php if ($showTitleOption === 'item_title'): ?>
+                <div class="margin-vertical-1">
+                    <h2><?php echo $item->displayTitle(); ?></h2>
+                    <?php if ($alternative = $item->value('dcterms:alternative')): ?>
+                        <h2 class="h4 italic-font alternative"><small><?= htmlspecialchars($alternative) ?></small></h2>
+                    <?php endif; ?>
+                    <?php if ($location = $item->value('curation:location')): ?>
+                        <h2 class="h4 location"><small><?= htmlspecialchars($location) ?></small></h2>
+                    <?php endif; ?>
+                    <?php $date = $item->value("dcterms:date"); ?>
+                    <?php if ($date): ?>
+                        <h2 class="h4 date"><small><?php echo $date; ?></small></h2>
+                    <?php endif; ?>
+                </div>
+            <?php elseif ($showTitleOption === 'file_name'): ?>
+                <div class="margin-vertical-1">
+                    <h2><?php echo $media->displayTitle(); ?></h2>
+                </div>
+                <?php if ($alternative = $item->value('dcterms:alternative')): ?>
+                    <h2 class="h4 italic-font alternative"><small><?= htmlspecialchars($alternative) ?></small></h2>
+                <?php endif; ?>
+                <?php $date = $item->value("dcterms:date"); ?>
+                    <?php if ($date): ?>
+                        <h2 class="h4 date"><small><?php echo $date; ?></small></h2>
+                    <?php endif; ?>
+                <?php if ($location = $item->value('curation:location')): ?>
+                    <h2 class="h4 location"><small><?= htmlspecialchars($location) ?></small></h2>
+                <?php endif; ?>
             <?php endif; ?>
         </div>
-        <div class="text">
-            <?= $caption ?>
-        </div>
-        <div class="learn-more">
-            <h2 class="button medium warning hollow"><?= $item->link("Learn more") ?></h2>
+        <?php if ($caption): ?>
+            <div class="caption"><?php echo $caption; ?></div>
+        <?php endif; ?>
+        <?php
+        $identifier = $item->value("dcterms:identifier");
+            if ($identifier): ?>
+                <div class="flex-container width-100">
+                    <h2 class="h4 identifier flex-container margin-vertical-1 align-left">
+                        <small><?php echo "Ref. " . $identifier; ?></small>
+                    </h2>
+                </div>
+            <?php endif; ?>
+        <div class="learn-more flex-container align-center">
+            <?php echo $item->link("Learn more", null, ['class' => 'button medium warning hollow']); ?>
         </div>
     </div>
 </div>
