--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -3807,3 +3807,18 @@ transform: scale(1.01);
     }
   }
 }
+
+/*Lazy Load*/ 
+.reveal-on-scroll {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+.reveal-on-scroll.visible {
+  opacity: 1;
+  transform: none;
+}
+
+.reveal-on-scroll:nth-of-type(1) { transition-delay: 0.1s; }
+.reveal-on-scroll:nth-of-type(2) { transition-delay: 0.2s; }
