--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -20,6 +20,7 @@ $this->headScript()->prependFile($this->assetUrl('js/global.js', 'Omeka'));
 $this->headScript()->prependFile($this->assetUrl('js/langselect.js'));
 $this->headScript()->prependFile($this->assetUrl('js/jquery.peekabar.js'));
 $this->headScript()->prependFile($this->assetUrl('vendor/jquery/jquery.min.js', 'Omeka'));
+$this->headScript()->appendFile($this->assetUrl('js/lazy.js'));
 $this->trigger('view.layout');
 $this->jsTranslate();
 $userBar = $this->userBar();
