--- a/view/common/block-template/media-text-around-image.phtml
+++ b/view/common/block-template/media-text-around-image.phtml
@@ -2,45 +2,47 @@
 $hyperlink = $this->plugin('hyperlink');
 $thumbnailType = $block->dataValue('thumbnail_type');
 ?>
-<div class="text-around-image <?php echo $this->escapeHtml(implode(' ', $classes)); ?>">
-    <?php foreach($attachments as $attachment): ?>
-    <?php $item = $attachment->item(); ?>
-    <div class="item resource <?php echo $thumbnailType; ?>">
-        <?php
-        $media = $attachment->media() ?: $item->primaryMedia();
-        if ($media):
-            if ($mediaDisplay === 'thumbnail') {
-                switch ($link) {
-                    case 'original':
-                        $url = $media->originalUrl();
-                        break;
-                    case 'item':
-                        $url = $item->url();
-                        break;
-                    case 'media':
-                        $url = $media->url();
-                        break;
-                    default:
-                        throw new \InvalidArgumentException(sprintf('Invalid link type "%s"', $linkType));
+<div class="reveal-on-scroll lazy-fade-in">  <!-- Lazy load block -->
+    <div class="text-around-image <?php echo $this->escapeHtml(implode(' ', $classes)); ?>">
+        <?php foreach($attachments as $attachment): ?>
+        <?php $item = $attachment->item(); ?>
+        <div class="item resource <?php echo $thumbnailType; ?>">
+            <?php
+            $media = $attachment->media() ?: $item->primaryMedia();
+            if ($media):
+                if ($mediaDisplay === 'thumbnail') {
+                    switch ($link) {
+                        case 'original':
+                            $url = $media->originalUrl();
+                            break;
+                        case 'item':
+                            $url = $item->url();
+                            break;
+                        case 'media':
+                            $url = $media->url();
+                            break;
+                        default:
+                            throw new \InvalidArgumentException(sprintf('Invalid link type "%s"', $linkType));
+                    }
+                    echo $hyperlink->raw($this->thumbnail($media, $thumbnailType), $url);
+                } else {
+                    echo $media->render([
+                        'thumbnailType' => $thumbnailType,
+                        'link' => $link,
+                    ]);
                 }
-                echo $hyperlink->raw($this->thumbnail($media, $thumbnailType), $url);
-            } else {
-                echo $media->render([
-                    'thumbnailType' => $thumbnailType,
-                    'link' => $link,
-                ]);
-            }
-        endif;
-        ?>
-        <?php if ($showTitleOption === 'item_title'): ?>
-        <h2 class="h5 padding-top-1"><?php echo $item->link($item->displayTitle()); ?></h2>
-        <?php elseif ($showTitleOption === 'file_name'): ?>
-        <h2 class="h5 padding-top-1"><?php echo $media->displayTitle(); ?></h2>
-        <?php endif; ?>
-        <?php $caption = $attachment->caption(); ?>
-        <?php if ($caption): ?>
-        <div class="caption"><?php echo $caption; ?></div>
-        <?php endif; ?>
+            endif;
+            ?>
+            <?php if ($showTitleOption === 'item_title'): ?>
+            <h2 class="h5 padding-top-1"><?php echo $item->link($item->displayTitle()); ?></h2>
+            <?php elseif ($showTitleOption === 'file_name'): ?>
+            <h2 class="h5 padding-top-1"><?php echo $media->displayTitle(); ?></h2>
+            <?php endif; ?>
+            <?php $caption = $attachment->caption(); ?>
+            <?php if ($caption): ?>
+            <div class="caption"><?php echo $caption; ?></div>
+            <?php endif; ?>
+        </div>
+        <?php endforeach; ?>
     </div>
-    <?php endforeach; ?>
 </div>
