--- a/view/common/block-template/media-caption-text-lazy.phtml
+++ b/view/common/block-template/media-caption-text-lazy.phtml
@@ -2,64 +2,60 @@
 $hyperlink = $this->plugin('hyperlink');
 $thumbnailType = $block->dataValue('thumbnail_type');
 ?>
-<div class="reveal-on-scroll lazy-fade-in">  <!-- Lazy load block -->
-    <div class="full-width file-caption-block media-caption-text resourceTextGrid padding-horizontal-1 large-padding-2 margin-vertical-1 large-margin-vertical-2">
-        <div class="file file-caption-text media-embed large-padding-horizontal-1 <?php echo $this->escapeHtml(implode(' ', $classes)); ?>">
-            <?php foreach($attachments as $attachment): ?>
-            <?php $item = $attachment->item(); ?>
-            <div class="item resource <?php echo $thumbnailType; ?>">
-                <?php
-                $media = $attachment->media() ?: $item->primaryMedia();
-                $mediaRenderer = $media->renderer();
-                if ($media):
-                    if ($mediaDisplay === 'thumbnail') {
-                        switch ($link) {
-                            case 'original':
-                                $url = $media->originalUrl();
-                                break;
-                            case 'item':
-                                $url = $item->url();
-                                break;
-                            case 'media':
-                                $url = $media->url();
-                                break;
-                            default:
-                            throw new \InvalidArgumentException(sprintf('Invalid link type "%s"', $link));
-                        }
-                        echo $hyperlink->raw($this->thumbnail($media, $thumbnailType), $url);
-                    } else {
-                        echo $media->render([
-                            'thumbnailType' => $thumbnailType,
-                            'link' => $link,
-                        ]);
-                    }
-                endif;
-                ?>
-                </div>
-            </div>
-            <div class="block-html padding-horizontal-1 xlarge-padding-horizontal-3">
-                <?php if ($showTitleOption === 'item_title'): ?>
-                    <div class="separator-center metadata margin-vertical-1">
-                        <h2><?php echo $item->displayTitle(); ?></h2>
-                        <?php if ($alternative = $item->value('dcterms:alternative')): ?>
-                            <h2 class="h4 italic-font"><small><?= htmlspecialchars($alternative) ?></small></h2>
-                        <?php endif; ?>
-                    </div>
-                <?php elseif ($showTitleOption === 'file_name'): ?>
-                    <div class="separator-center metadata margin-vertical-1">
-                        <h2><?php echo $media->displayTitle(); ?></h2>
-                    </div>
-                <?php endif; ?>
-                <?php $caption = $attachment->caption(); ?>
-                <?php if ($caption): ?>
-                    <div class="caption margin-top-1 large-margin-top-2"><?php echo $caption; ?></div>
-                <?php endif; ?>
-                <div class="learn-more flex-container align-center">
-                    <?php echo $item->link("Learn more", null, ['class' => 'button medium warning hollow']); ?>
-                </div>
-            </div>
-            <?php endforeach; ?>
-        </div>
-        </div>
-    <div>
+<?php
+$hyperlink     = $this->plugin('hyperlink');
+$thumbnailType = $block->dataValue('thumbnail_type');
+?>
+<div class="reveal-on-scroll lazy-fade-in">
+  <div class="full-width file-caption-block media-caption-text resourceTextGrid
+              padding-horizontal-1 large-padding-2 margin-vertical-1 large-margin-vertical-2">
+    <div class="file file-caption-text media-embed large-padding-horizontal-1
+                <?= $this->escapeHtml(implode(' ', $classes)); ?>">
+      <?php foreach ($attachments as $attachment): 
+        $item  = $attachment->item();
+        $media = $attachment->media() ?: $item->primaryMedia();
+        if (! $media) {
+            continue;
+        }
+
+        // Determine the URL for the thumbnail or media render:
+        if ($mediaDisplay === 'thumbnail') {
+            switch ($link) {
+                case 'original':
+                    $url      = $media->originalUrl();
+                    $imgUrl   = $media->originalUrl();
+                    break;
+                case 'item':
+                    $url      = $item->url();
+                    $imgUrl   = $media->originalUrl();
+                    break;
+                case 'media':
+                    $url      = $media->url();
+                    $imgUrl   = $media->originalUrl();
+                    break;
+                default:
+                    throw new \InvalidArgumentException(sprintf(
+                        'Invalid link type "%s"', 
+                        $link
+                    ));
+            }
+            // For true lazy‑load, output an <img> with data-src:
+            $imgTag = sprintf(
+                '<img class="lazy-image" data-src="%s" alt="%s">',
+                $this->escapeHtmlAttr($this->thumbnail($media, $thumbnailType, ['full'])['src']),
+                $this->escapeHtmlAttr($media->altText() ?: $item->displayTitle())
+            );
+            // Wrap in the hyperlink (you can also do loading="lazy" here as fallback):
+            echo $hyperlink->raw($imgTag, $url);
+
+        } else {
+            // For other media types (video, embed), render a placeholder iframe or video tag:
+            $embedUrl = $media->url();
+            echo '<div class="lazy-embed" data-src="' 
+                 . $this->escapeHtmlAttr($embedUrl) 
+                 . '"></div>';
+        }
+      endforeach; ?>
+    </div>
+  </div>
 </div>  <!-- End of reveal-on-scroll -->
