--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -15,11 +15,13 @@ if (isset($stylesheet)) {
 $this->headLink()->prependStylesheet($this->assetUrl('css/iconfonts.css', 'Omeka'));
 $this->headLink()->prependStylesheet('//fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap');
 $this->headLink()->prependStylesheet($this->assetUrl('css/jquery.peekabar.css'));
+$this->headLink()->appendStylesheet($this->assetUrl('css/annona.css'));
 $this->headScript()->prependFile($this->assetUrl('vendor/foundation/foundation.min.js'));
 $this->headScript()->prependFile($this->assetUrl('js/global.js', 'Omeka'));
 $this->headScript()->prependFile($this->assetUrl('js/langselect.js'));
 $this->headScript()->prependFile($this->assetUrl('js/jquery.peekabar.js'));
-$this->headScript()->prependFile($this->assetUrl('vendor/jquery/jquery.min.js', 'Omeka'));
+$this->headScript()->prependFile($this->assetUrl('vendor/jquery/jquery.min.js', 'Omeka')); 
+$this->headScript()->appendFile($this->assetUrl('js/annona.js'));
 $this->trigger('view.layout');
 $this->jsTranslate();
 $userBar = $this->userBar();
