--- a/view/common/block-template/los-card-featured.phtml
+++ b/view/common/block-template/los-card-featured.phtml
@@ -1,4 +1,6 @@
 <div class="list-of-sites">
+    <h2 class="site-group-heading">Featured Sites</h2>
+
     <div class="site-list layout-card">
         <?php
         $siteSettingService = $this->getHelperPluginManager()->get('siteSetting');
@@ -7,11 +9,27 @@
             $featured = $siteSettingService('extended_site_description_featured', null, $site->id());
 
             if ($featured):
-                echo $this->partial('common/site-list-entry', [
-                    'site' => $site,
-                    'showSummary' => $summaries,
-                    'showThumbnail' => $thumbnails
-                ]);
+                $thumbnail = $thumbnails ? $site->thumbnail() : null;
+                $summary = $summaries ? $site->summary() : null;
+        ?>
+                <div class="site card">
+                    <?php if ($thumbnail): ?>
+                        <div class="site-thumbnail">
+                            <?php echo $this->thumbnail($thumbnail, 'square', ['class' => 'site-thumbnail-image']); ?>
+                        </div>
+                    <?php endif; ?>
+
+                    <div class="card-divider">
+                        <?php echo $this->hyperlink($site->title(), $site->siteUrl(), ['class' => 'site-link']); ?>
+                    </div>
+
+                    <?php if ($summary): ?>
+                        <div class="site-summary card-section">
+                            <?php echo nl2br($this->escapeHtml($summary)); ?>
+                        </div>
+                    <?php endif; ?>
+                </div>
+        <?php
             endif;
         endforeach;
         ?>
