--- a/view/common/block-template/los-card-library.phtml
+++ b/view/common/block-template/los-card-library.phtml
@@ -18,7 +18,7 @@
     }
 
     // Function to render styled site cards
-    function renderSiteGroup($groupTitle, $groupSites, $thumbnails, $summaries, $view) {
+    function renderLibrarySiteGroup($groupTitle, $groupSites, $thumbnails, $summaries, $view) {
         if (empty($groupSites)) return;
     ?>
 
@@ -50,7 +50,7 @@
         }
 
         // Output both groups
-        renderSiteGroup('Library Sites', $librarySites, $thumbnails, $summaries, $this);
+        renderLibrarySiteGroup('Library Sites', $librarySites, $thumbnails, $summaries, $this);
         ?>
     </div>
 
