--- a/view/common/block-template/los-card-dynamic.phtml
+++ b/view/common/block-template/los-card-dynamic.phtml
@@ -1,4 +1,4 @@
-<div>
+<div class="reveal-on-scroll lazy-fade-in">  <!-- Load Effect block -->
     <div class="list-of-sites-dynamic site-list layout-card">
         <?php foreach($sites as $site): ?>
             <?php
