--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -3859,3 +3859,20 @@ transform: scale(1.01);
 .list-of-sites-dynamic.site-list .site.card:hover {
   opacity: 1;
 }
+
+/*Load Effect*/ 
+/*Lazy Load*/ 
+.reveal-on-scroll {
+  width: 100%; /*Added by JMc*/ 
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+.reveal-on-scroll.visible {
+  opacity: 1;
+  transform: none;
+}
+
+.reveal-on-scroll:nth-of-type(1) { transition-delay: 0.1s; }
+.reveal-on-scroll:nth-of-type(2) { transition-delay: 0.2s; }
