--- a/view/common/block-template/los-card-external.phtml
+++ b/view/common/block-template/los-card-external.phtml
@@ -1,60 +1,62 @@
-<div class="list-of-sites">
-    <?php
-    // Get the helper
-    $siteSettingService = $this->getHelperPluginManager()->get('siteSetting');
+<div class="reveal-on-scroll lazy-fade-in">  <!-- Load Effect block -->
+    <div class="list-of-sites">
+        <?php
+        // Get the helper
+        $siteSettingService = $this->getHelperPluginManager()->get('siteSetting');
 
-    // Group arrays
-    $externalSites = [];
+        // Group arrays
+        $externalSites = [];
 
-    // Categorize sites
-    foreach ($sites as $site) {
-        $category = $siteSettingService('extended_site_description_categories', null, $site->id());
+        // Categorize sites
+        foreach ($sites as $site) {
+            $category = $siteSettingService('extended_site_description_categories', null, $site->id());
 
-        if (empty($category)) continue;
+            if (empty($category)) continue;
 
-        if (is_array($category)) {
-            if (in_array('External', $category)) $externalSites[] = $site;
-        }
-    }
-
-    // Function to render styled site cards
-    function renderExternalSiteGroup($groupTitle, $groupSites, $thumbnails, $summaries, $view) {
-        if (empty($groupSites)) return;
-    ?>
-
-    <h2 class="site-group-heading"><?php echo htmlspecialchars($groupTitle); ?></h2>
-    <div class="site-list layout-card">
-        <?php foreach ($groupSites as $site) {
-                $thumbnail = $thumbnails ? $site->thumbnail() : null;
-                $summary = $summaries ? $site->summary() : null;
-                ?>
-                <div class="site card">
-                    <?php if ($thumbnail): ?>
-                        <div class="site-thumbnail">
-                            <?php echo $view->thumbnail($thumbnail, 'square', ['class' => 'site-thumbnail-image']); ?>
-                        </div>
-                    <?php endif; ?>
-
-                    <div class="card-divider">
-                        <?php echo $view->hyperlink($site->title(), $site->siteUrl(), ['class' => 'site-link']); ?>
-                    </div>
-
-                    <?php if ($summary): ?>
-                        <div class="site-summary card-section">
-                            <?php echo nl2br($view->escapeHtml($summary)); ?>
-                        </div>
-                    <?php endif; ?>
-                </div>
-                <?php
+            if (is_array($category)) {
+                if (in_array('External', $category)) $externalSites[] = $site;
             }
         }
 
-        // Output both groups
-        renderExternalSiteGroup('External Sites', $externalSites, $thumbnails, $summaries, $this);
+        // Function to render styled site cards
+        function renderExternalSiteGroup($groupTitle, $groupSites, $thumbnails, $summaries, $view) {
+            if (empty($groupSites)) return;
         ?>
-    </div>
 
-    <?php if ($pagination): ?>
-        <?php echo $this->pagination(); ?>
-    <?php endif; ?>
+        <h2 class="site-group-heading"><?php echo htmlspecialchars($groupTitle); ?></h2>
+        <div class="site-list layout-card">
+            <?php foreach ($groupSites as $site) {
+                    $thumbnail = $thumbnails ? $site->thumbnail() : null;
+                    $summary = $summaries ? $site->summary() : null;
+                    ?>
+                    <div class="site card">
+                        <?php if ($thumbnail): ?>
+                            <div class="site-thumbnail">
+                                <?php echo $view->thumbnail($thumbnail, 'square', ['class' => 'site-thumbnail-image']); ?>
+                            </div>
+                        <?php endif; ?>
+
+                        <div class="card-divider">
+                            <?php echo $view->hyperlink($site->title(), $site->siteUrl(), ['class' => 'site-link']); ?>
+                        </div>
+
+                        <?php if ($summary): ?>
+                            <div class="site-summary card-section">
+                                <?php echo nl2br($view->escapeHtml($summary)); ?>
+                            </div>
+                        <?php endif; ?>
+                    </div>
+                    <?php
+                }
+            }
+
+            // Output both groups
+            renderExternalSiteGroup('External Sites', $externalSites, $thumbnails, $summaries, $this);
+            ?>
+        </div>
+
+        <?php if ($pagination): ?>
+            <?php echo $this->pagination(); ?>
+        <?php endif; ?>
+    </div>
 </div>
