--- a/view/common/block-template/media-text-only.phtml
+++ b/view/common/block-template/media-text-only.phtml
@@ -17,71 +17,73 @@ $filterLocale = (bool) $siteSetting('filter_locale_values');
 $lang = $filterLocale ? $this->lang() : null;
 ?>
 
-<div class="block media-text flex-container align-middle align-center">
-    <div class="resource-text align-middle medium-padding-1 flex-container flex-dir-column align-middle align-center">
-            <?php foreach ($attachments as $attachment): 
-                $render = null;
-                $title = null;
-                $link = null;
-                $item = $attachment->item();
-                $caption = $attachment->caption();
-                if ($item) {
-                    $media = $attachment->media() ?: $item->primaryMedia();
-                    if ($media) {
-                        if ($showTitleOption == 'item_title') {
-                            $title = $item->displayTitle(null, $lang);
-                        } elseif ($showTitleOption == 'file_name') {
-                            $title = $media->displayTitle(null, $lang);
+<div class="reveal-on-scroll lazy-fade-in">  <!-- Load Effect block -->
+    <div class="block media-text flex-container align-middle align-center">
+        <div class="resource-text align-middle medium-padding-1 flex-container flex-dir-column align-middle align-center">
+                <?php foreach ($attachments as $attachment): 
+                    $render = null;
+                    $title = null;
+                    $link = null;
+                    $item = $attachment->item();
+                    $caption = $attachment->caption();
+                    if ($item) {
+                        $media = $attachment->media() ?: $item->primaryMedia();
+                        if ($media) {
+                            if ($showTitleOption == 'item_title') {
+                                $title = $item->displayTitle(null, $lang);
+                            } elseif ($showTitleOption == 'file_name') {
+                                $title = $media->displayTitle(null, $lang);
+                            }
                         }
                     }
-                }
-                ?>
-            <?php endforeach; ?>
-        <div class="metadata separator-center margin-bottom-1">
-        <?php if ($showTitleOption === 'item_title'): ?>
-                <div class="margin-vertical-1">
-                    <h2><?php echo $item->displayTitle(); ?></h2>
+                    ?>
+                <?php endforeach; ?>
+            <div class="metadata separator-center margin-bottom-1">
+            <?php if ($showTitleOption === 'item_title'): ?>
+                    <div class="margin-vertical-1">
+                        <h2><?php echo $item->displayTitle(); ?></h2>
+                        <?php if ($alternative = $item->value('dcterms:alternative')): ?>
+                            <h2 class="h4 italic-font alternative"><small><?= htmlspecialchars($alternative) ?></small></h2>
+                        <?php endif; ?>
+                        <?php if ($location = $item->value('curation:location')): ?>
+                            <h2 class="h4 location"><small><?= htmlspecialchars($location) ?></small></h2>
+                        <?php endif; ?>
+                        <?php $date = $item->value("dcterms:date"); ?>
+                        <?php if ($date): ?>
+                            <h2 class="h4 date"><small><?php echo $date; ?></small></h2>
+                        <?php endif; ?>
+                    </div>
+                <?php elseif ($showTitleOption === 'file_name'): ?>
+                    <div class="margin-vertical-1">
+                        <h2><?php echo $media->displayTitle(); ?></h2>
+                    </div>
                     <?php if ($alternative = $item->value('dcterms:alternative')): ?>
                         <h2 class="h4 italic-font alternative"><small><?= htmlspecialchars($alternative) ?></small></h2>
                     <?php endif; ?>
+                    <?php $date = $item->value("dcterms:date"); ?>
+                        <?php if ($date): ?>
+                            <h2 class="h4 date"><small><?php echo $date; ?></small></h2>
+                        <?php endif; ?>
                     <?php if ($location = $item->value('curation:location')): ?>
                         <h2 class="h4 location"><small><?= htmlspecialchars($location) ?></small></h2>
                     <?php endif; ?>
-                    <?php $date = $item->value("dcterms:date"); ?>
-                    <?php if ($date): ?>
-                        <h2 class="h4 date"><small><?php echo $date; ?></small></h2>
-                    <?php endif; ?>
-                </div>
-            <?php elseif ($showTitleOption === 'file_name'): ?>
-                <div class="margin-vertical-1">
-                    <h2><?php echo $media->displayTitle(); ?></h2>
-                </div>
-                <?php if ($alternative = $item->value('dcterms:alternative')): ?>
-                    <h2 class="h4 italic-font alternative"><small><?= htmlspecialchars($alternative) ?></small></h2>
                 <?php endif; ?>
-                <?php $date = $item->value("dcterms:date"); ?>
-                    <?php if ($date): ?>
-                        <h2 class="h4 date"><small><?php echo $date; ?></small></h2>
-                    <?php endif; ?>
-                <?php if ($location = $item->value('curation:location')): ?>
-                    <h2 class="h4 location"><small><?= htmlspecialchars($location) ?></small></h2>
+            </div>
+            <?php if ($caption): ?>
+                <div class="caption"><?php echo $caption; ?></div>
+            <?php endif; ?>
+            <?php
+            $identifier = $item->value("dcterms:identifier");
+                if ($identifier): ?>
+                    <div class="flex-container width-100">
+                        <h2 class="h4 identifier flex-container margin-vertical-1 align-left">
+                            <small><?php echo "Ref. " . $identifier; ?></small>
+                        </h2>
+                    </div>
                 <?php endif; ?>
-            <?php endif; ?>
-        </div>
-        <?php if ($caption): ?>
-            <div class="caption"><?php echo $caption; ?></div>
-        <?php endif; ?>
-        <?php
-        $identifier = $item->value("dcterms:identifier");
-            if ($identifier): ?>
-                <div class="flex-container width-100">
-                    <h2 class="h4 identifier flex-container margin-vertical-1 align-left">
-                        <small><?php echo "Ref. " . $identifier; ?></small>
-                    </h2>
-                </div>
-            <?php endif; ?>
-        <div class="learn-more flex-container align-center">
-            <?php echo $item->link("Learn more", null, ['class' => 'button medium warning hollow']); ?>
+            <div class="learn-more flex-container align-center">
+                <?php echo $item->link("Learn more", null, ['class' => 'button medium warning hollow']); ?>
+            </div>
         </div>
     </div>
 </div>
