--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -16,7 +16,7 @@ $this->headLink()->prependStylesheet($this->assetUrl('css/iconfonts.css', 'Omeka
 $this->headLink()->prependStylesheet('//fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap');
 $this->headLink()->prependStylesheet($this->assetUrl('css/jquery.peekabar.css'));
 $this->headLink()->appendStylesheet($this->assetUrl('css/annona.css'));
-$this->headLink()->appendStylesheet($this->assetUrl('css/scrollbox.css'));
+$this->headLink()->appendStylesheet($this->assetUrl('css/scrollbox-revised.css'));
 $this->headScript()->prependFile($this->assetUrl('vendor/foundation/foundation.min.js'));
 $this->headScript()->prependFile($this->assetUrl('js/global.js', 'Omeka'));
 $this->headScript()->prependFile($this->assetUrl('js/langselect.js'));
@@ -24,8 +24,6 @@ $this->headScript()->prependFile($this->assetUrl('js/jquery.peekabar.js'));
 $this->headScript()->prependFile($this->assetUrl('vendor/jquery/jquery.min.js', 'Omeka')); 
 $this->headScript()->prependFile($this->assetUrl('js/load-effect.js'));
 $this->headScript()->appendFile($this->assetUrl('js/annona.js'));
-$this->headScript()->appendFile($this->assetUrl('js/scrollbox.js'));
-$this->headScript()->appendFile($this->assetUrl('js/latest.js'));
 $this->trigger('view.layout');
 $this->jsTranslate();
 $userBar = $this->userBar();
