--- a/view/common/block-template/los-card-featured-js.phtml
+++ b/view/common/block-template/los-card-featured-js.phtml
@@ -40,7 +40,7 @@ endforeach;
 
         <aside class="covermain">
             <h1>Featured stories</h1>
-            <section id="featured" class="full-width">
+            <section id="featured">
             <ul class="thrower"></ul>
                 <nav><button class="throwleft" disabled="disabled">&lt;</button><button class="throwright">&gt;</button></nav>
             </section>
