Renamed scrollbox-revised to scrollbox - deleted original MDC files

--- a/view/common/block-template/los-card-featured-js.phtml
+++ b/view/common/block-template/los-card-featured-js.phtml
@@ -1,5 +1,5 @@
 <?php
-$this->headLink()->appendStylesheet($this->assetUrl('css/scrollbox-revised.css'));
+$this->headLink()->appendStylesheet($this->assetUrl('css/scrollbox.css'));
 ?>
 
 <?php
@@ -32,7 +32,7 @@ endforeach;
     window.featuredScrollbox = <?php echo json_encode($featuredScrollbox, JSON_HEX_TAG | JSON_HEX_AMP | JSON_HEX_APOS | JSON_HEX_QUOT); ?>;
     </script>
 
-<script src="http://localhost/omeka-s/themes/foundation-s/asset/js/scrollbox-revised.js"></script>
+<script src="http://localhost/omeka-s/themes/foundation-s/asset/js/scrollbox.js"></script>
 
 <div class="full-width">
     <section class="scrollbox-thrower" style="margin-top: 60px;">
