Revised grid for mobile

--- a/view/common/block-template/los-card-featured-js.phtml
+++ b/view/common/block-template/los-card-featured-js.phtml
@@ -40,7 +40,7 @@ endforeach;
             <ul class="thrower"></ul>
                 <nav><button class="throwleft" disabled="disabled">&lt;</button><button class="throwright">&gt;</button></nav>
             </section>
-            <a class="viewall" href="./">View all</a>
+            <!-- <a class="viewall" href="./">View all</a> -->
         </aside>
 
         <aside class="coverright">&nbsp;</aside>
