Reduced h2 font size for mobiles and tablets?

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -16,7 +16,7 @@ $thumbnail-shadow-hover: 0 0 6px 1px rgba($primary-color, 0.5);
 /*Font Sizes*/ 
 h2,
 .h2 {
-@include breakpoint(large) {
+@include breakpoint(medium) {
   font-size: 1.4rem;
   }
 }
