Added Browse option for List of Sites

--- a/asset/scss/seafoam.scss
+++ b/asset/scss/seafoam.scss
@@ -3861,6 +3861,35 @@ transform: scale(1.01);
   }
 }
 
+/*List of Sites - Browse*/ 
+.site-list.los-browse {
+  grid-template-columns: 1fr;
+  @include breakpoint(750) {
+    grid-template-columns: 1fr 1fr;
+  }
+  @include breakpoint(xlarge) {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+.site-list.los-browse .site.card {
+  flex-direction: row;
+}
+
+.los-browse .card {
+  display: grid;
+  grid-template-columns: 1fr 1.5fr;
+}
+
+.los-browse .card-divider {
+  background: unset;
+  align-items: center;
+}
+
+.site-list.los-browse .site-thumbnail-image {
+  height: 10rem;
+}
+
 .site-list:hover .site.card,
 .list-of-sites-dynamic.site-list:hover .site.card {
   opacity: 0.7;
